--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff; }
+  background-color: #000000; }
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
@@ -4878,7 +4878,7 @@ a.close.disabled {
   .bs-popover-top .arrow::before, .bs-popover-auto[x-placement^="top"] .arrow::before {
     bottom: 0;
     border-top-color: rgba(0, 0, 0, 0.25); }
-  
+
   .bs-popover-top .arrow::after,
   .bs-popover-auto[x-placement^="top"] .arrow::after {
     bottom: 1px;
@@ -4898,7 +4898,7 @@ a.close.disabled {
   .bs-popover-right .arrow::before, .bs-popover-auto[x-placement^="right"] .arrow::before {
     left: 0;
     border-right-color: rgba(0, 0, 0, 0.25); }
-  
+
   .bs-popover-right .arrow::after,
   .bs-popover-auto[x-placement^="right"] .arrow::after {
     left: 1px;
@@ -4915,7 +4915,7 @@ a.close.disabled {
   .bs-popover-bottom .arrow::before, .bs-popover-auto[x-placement^="bottom"] .arrow::before {
     top: 0;
     border-bottom-color: rgba(0, 0, 0, 0.25); }
-  
+
   .bs-popover-bottom .arrow::after,
   .bs-popover-auto[x-placement^="bottom"] .arrow::after {
     top: 1px;
@@ -4944,7 +4944,7 @@ a.close.disabled {
   .bs-popover-left .arrow::before, .bs-popover-auto[x-placement^="left"] .arrow::before {
     right: 0;
     border-left-color: rgba(0, 0, 0, 0.25); }
-  
+
   .bs-popover-left .arrow::after,
   .bs-popover-auto[x-placement^="left"] .arrow::after {
     right: 1px;
@@ -8011,10 +8011,10 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #b7472a; }
+  color: #ffc107; }
   a:hover, a:focus {
     text-decoration: none;
-    color: #b7472a;
+    color: #ffc107;
     outline: none !important; }
 
 h1, h2, h3, h4, h5,
@@ -8027,14 +8027,14 @@ h1, h2, h3, h4, h5,
   position: relative;
   z-index: 0;
   width: 100%;
-  background: #a23f25; }
+  background: #ffc107; }
   .wrap .phone {
     z-index: 1;
     font-weight: 200; }
     .wrap .phone span {
-      color: rgba(255, 255, 255, 0.6); }
+      color: #000 }
     .wrap .phone a {
-      color: rgba(255, 255, 255, 0.6);
+      color: #000 ;
       font-size: 12px; }
   @media (max-width: 767.98px) {
     .wrap .reg {
@@ -8043,7 +8043,7 @@ h1, h2, h3, h4, h5,
   .wrap .reg p {
     font-weight: 200; }
     .wrap .reg p a {
-      color: rgba(255, 255, 255, 0.8);
+      color: #000000;
       text-transform: uppercase;
       font-size: 13px; }
 
@@ -8060,10 +8060,10 @@ h1, h2, h3, h4, h5,
       margin-right: 10px; }
       .social-media p a span {
         font-size: 12px;
-        color: #fff; }
+        color: #000; }
       .social-media p a:hover {
-        background: #b7472a;
-        border-color: #b7472a; }
+        background: #ffc103;
+        border-color: #ffc103; }
         .social-media p a:hover span {
           color: #fff; }
 
@@ -8161,7 +8161,7 @@ h1, h2, h3, h4, h5,
         .ftco-navbar-light .btn-group .dropdown-menu .dropdown-item .text .quantity {
           color: rgba(0, 0, 0, 0.4); }
       .ftco-navbar-light .btn-group .dropdown-menu .dropdown-item.btn-link {
-        color: #b7472a;
+        color: #ffc107;
         text-transform: uppercase;
         font-size: 13px;
         font-weight: 500; }
@@ -8182,7 +8182,7 @@ h1, h2, h3, h4, h5,
     letter-spacing: 1px;
     opacity: 1 !important; }
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
-      color: #b7472a; }
+      color: #ffc107; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
         padding-left: 0;
@@ -8216,7 +8216,7 @@ h1, h2, h3, h4, h5,
           display: none; } }
   .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
     color: #fff;
-    border: 1px solid #b7472a;
+    border: 1px solid #ffc107;
     padding-top: .5rem;
     padding-bottom: .5rem;
     padding-left: 18px;
@@ -8231,8 +8231,8 @@ h1, h2, h3, h4, h5,
       display: inline-block;
       color: #fff; }
     .ftco-navbar-light .navbar-nav > .nav-item.cta > a:hover {
-      background: #b7472a;
-      border: 1px solid #b7472a; }
+      background: #ffc107;
+      border: 1px solid #ffc107; }
   .ftco-navbar-light .navbar-nav > .nav-item.cta.cta-colored a {
     border: 1px solid #01d28e;
     background: #01d28e !important; }
@@ -8240,7 +8240,7 @@ h1, h2, h3, h4, h5,
     color: #fff; }
   @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-      color: #b7472a; } }
+      color: #ffc107; } }
   .ftco-navbar-light .navbar-toggler {
     border: none;
     color: rgba(255, 255, 255, 0.5) !important;
@@ -8251,7 +8251,7 @@ h1, h2, h3, h4, h5,
     letter-spacing: .1em; }
     .ftco-navbar-light .navbar-toggler:hover, .ftco-navbar-light .navbar-toggler:focus {
       text-decoration: none;
-      color: #b7472a;
+      color: #ffc107;
       outline: none !important; }
   .ftco-navbar-light.scrolled {
     position: fixed;
@@ -8274,14 +8274,14 @@ h1, h2, h3, h4, h5,
       padding: 0 5px;
       background: rgba(0, 0, 0, 0.1); }
       .ftco-navbar-light.scrolled .btn-cart div small {
-        color: #b7472a; }
+        color: #ffc107; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light.scrolled .nav-item > .nav-link {
         padding-left: 0 !important;
         padding-right: 0 !important;
         padding-bottom: 0 !important; } }
     .ftco-navbar-light.scrolled .nav-item.active > a {
-      color: #b7472a !important; }
+      color: #ffc103 !important; }
     .ftco-navbar-light.scrolled .nav-item.cta > a {
       color: #fff !important;
       background: #b7472a;
@@ -8333,7 +8333,7 @@ h1, h2, h3, h4, h5,
     .ftco-navbar-light.scrolled .navbar-brand {
       color: #000000; }
       .ftco-navbar-light.scrolled .navbar-brand span {
-        color: #b7472a; }
+        color: #ffc107; }
 
 .navbar-brand {
   font-weight: 700;
@@ -8376,12 +8376,12 @@ h1, h2, h3, h4, h5,
       font-weight: 700;
       font-style: italic;
       color: transparent;
-      -webkit-text-fill-color: transparent;
+      -webkit-text-fill-color:;
       /* Will override color (regardless of order) */
       -webkit-text-stroke-width: .5px;
       -webkit-text-stroke-color: #fff; }
       .hero-wrap .slider-text h1 span {
-        color: #b7472a;
+        color: #ffc103;
         -webkit-text-fill-color: #fff;
         -webkit-text-stroke-width: 0px; }
       @media (max-width: 991.98px) {
@@ -8421,9 +8421,9 @@ h1, h2, h3, h4, h5,
           .hero-wrap.hero-wrap-2 .slider-text .breadcrumbs span a {
             color: rgba(255, 255, 255, 0.7); }
             .hero-wrap.hero-wrap-2 .slider-text .breadcrumbs span a:hover, .hero-wrap.hero-wrap-2 .slider-text .breadcrumbs span a:focus {
-              color: #b7472a; }
+              color: #ffc103; }
               .hero-wrap.hero-wrap-2 .slider-text .breadcrumbs span a:hover i, .hero-wrap.hero-wrap-2 .slider-text .breadcrumbs span a:focus i {
-                color: #b7472a; }
+                color: #ffc103; }
       .hero-wrap.hero-wrap-2 .slider-text .bread {
         position: relative;
         color: #fff !important;
@@ -8449,7 +8449,7 @@ h1, h2, h3, h4, h5,
       -ms-transform: translateY(-50%);
       transform: translateY(-50%);
       margin-top: -10px;
-      color: #b7472a !important;
+      color: #ffc103 !important;
       -moz-transition: all 0.7s ease;
       -o-transition: all 0.7s ease;
       -webkit-transition: all 0.7s ease;
@@ -8519,7 +8519,7 @@ h1, h2, h3, h4, h5,
   background: #f5f4f0 !important; }
 
 .bg-primary {
-  background: #b7472a; }
+  background: #ffc107; }
 
 .btn {
   cursor: pointer;
@@ -8534,9 +8534,9 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #b7472a !important;
-    border: 1px solid #b7472a !important;
-    color: #fff !important; }
+    background: #ffc107 !important;
+    border: 1px solid #ffc107 !important;
+    color: #000 !important; }
     .btn.btn-primary:hover {
       border: 1px solid #b7472a;
       background: transparent;
@@ -8567,26 +8567,26 @@ h1, h2, h3, h4, h5,
         color: #fff !important; }
 
 .ftco-intro {
-  background: #b7472a; }
+  background: #ffc107; }
   .ftco-intro .intro {
     z-index: 0;
     position: relative; }
 
 .intro {
   width: 100%;
-  background: #b7472a;
+  background: #ffc107;
   padding: 30px; }
   .intro.color-1 {
     background: #ab4227; }
   .intro.color-2 {
-    background: #a23f25; }
+    background: #ffc107; }
   .intro .icon {
     margin-right: 20px; }
     .intro .icon span {
       font-size: 60px;
       color: #fff; }
   .intro .text {
-    color: rgba(255, 255, 255, 0.8); }
+    color: #000; }
     .intro .text h2 {
       font-size: 18px;
       font-weight: 500;
@@ -8813,7 +8813,7 @@ h1, h2, h3, h4, h5,
       .nav-pills .nav-link {
         width: 100%; } }
     .nav-pills .nav-link:hover {
-      background: #a23f25;
+      background: #ffc107;
       color: #fff; }
     .nav-pills .nav-link.active {
       color: #fff;
@@ -9208,9 +9208,9 @@ textarea.form-control {
   .ftco-footer .ftco-footer-widget ul li {
     margin-bottom: 10px; }
     .ftco-footer .ftco-footer-widget ul li a {
-      color: rgba(255, 255, 255, 0.5); }
+      color: rgba(255, 255, 255, 1); }
       .ftco-footer .ftco-footer-widget ul li a span {
-        color: rgba(255, 255, 255, 0.5);
+        color: rgba(255, 255, 255, 1);
         font-size: 14px; }
   .ftco-footer .ftco-footer-widget .btn-primary {
     background: #fff !important;
@@ -9234,7 +9234,7 @@ textarea.form-control {
     width: 50px;
     display: block;
     float: left;
-    background: #b7472a;
+    background: #ffc107;
     border-radius: 50%;
     position: relative; }
     .ftco-footer-social li a span {
